--- a/langs/base.json
+++ b/langs/base.json
@@ -12,7 +12,7 @@
   "ERROR": "",
   "ERROR/DISMISS": "",
   "HOME/LANGUAGE": "",
-  "HOME/SEARCH": "",
+  "HOME/SEARCH/SEARCH": "",
   "HOME/SHORTCUT/ALT": "",
   "HOME/SHORTCUT/ALT/PRE": "",
   "HOME/SHORTCUT/ICONIC": "",
@@ -239,10 +239,10 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "",
-  "LEVEL/HACK_SHOW_LAYOUT": "",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "",
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "",
