--- a/langs/ca-ES.json
+++ b/langs/ca-ES.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "Commuta Foc Dash",
   "GM_VAR/0096": "Commuta Deixant del Wave",
   "HOME/LANGUAGE": "Idioma",
-  "HOME/SEARCH": "Cercar",
+  "HOME/SEARCH/SEARCH": "Cercar",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "Conjunts de Regles",
   "HOME/RULESETS/SAFE_MODE": "Mode Segur",
   "HOME/ANIM_SPEED": "Animacions (ms)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Permet pulsacions per sobre de 60hz, similar a les pulsacions pre-2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Deixant de Wave Clàssic",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplementació del deixant del Wave de la 2.1",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Amagar Botó de Pausa",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Desactiva la pulsació en els objectes",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Sense Flaix de Reaparició",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Desactiva el flaix de reaparició i l'efecte de cercle",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Sense Shaders",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Desactiva els shaders dins del nivell",
   "COSMETIC/HACK_NO_SHAKE": "Sense Sacsejada",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Desactiva els triggers de sacsejada",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Sense Deixant",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Estableix el deixant sempre com a desactivat",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Sense Pulsació de l'Wave",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Nivell",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Ensordir a",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Ensordir a",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Visualitza les hitboxes del nivell, només en morir",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Mostrar amb Noclip",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Mostrar Objecte de Mort",
-  "LEVEL/HACK_SHOW_LAYOUT": "Mostrar Disposició",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Elimina tota la decoració i color dels nivells",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Mostrar Trajectòria",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Dibuixa les trajectòries previstes d'un jugador per a premències/alliberaments continus de botons",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Mostrar Disposició",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Elimina tota la decoració i color dels nivells",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Mostrar Triggers",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Mostra triggers en el nivell",
   "LEVEL/HACK_SHIPCOPTER": "Shipcopter",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Longitud d'Editor Sense Límit",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostrar Deixant de Hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Mostra un deixant de per on ha anat la hitbox del teu jugador durant un intent, es requereix Mostrar Hitboxes",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Mostrar Trajectòria",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Dibuixa les trajectòries previstes d'un jugador per a premències/alliberaments continus de botons",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Càlcul Antic",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Eliminar",
   "REPLAY/GAMEPLAY": "Opcions de Joc",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Permetre Aleatorietat",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Convertir (.json, .gdr)",
   "REPLAY/NONE": "Cap Reproducció Seleccionada"
 }
