--- a/langs/el-GR.json
+++ b/langs/el-GR.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
   "HOME/LANGUAGE": "Γλώσσα",
-  "HOME/SEARCH": "Αναζήτηση",
+  "HOME/SEARCH/SEARCH": "Αναζήτηση",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "",
   "HOME/RULESETS/SAFE_MODE": "",
   "HOME/ANIM_SPEED": "",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Επιτρέπει για παλμούς παραπάνω απο 60hz, παρόμιο με το πως ήταν πριν το 2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Κλασικό Wave Trail",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Επαναεφαρμόζει το Wave Trail όπως ήταν στο 2.1",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Απόκρυψη κουμπιού παύσης",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Απενεργοποιεί τους παλμούς σε αντικείμενα",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Όχι Respawn Flash",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Απενεργοποιεί το flash εφέ όταν αρχίζεις νέα προσπάθεια",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Όχι Shaders",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Απενεργοποιεί τους shaders σε επίπεδο",
   "COSMETIC/HACK_NO_SHAKE": "Χωρίς Κούνημα",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Απενεργοποιεί τις σκανδάλες ανακίνησης",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Χωρίς Μονοπάτι",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Ορίζει το ίχνος σε πάντα απενεργοποιημένο",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Χωρίς παλμό κυμάτων",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Επίπεδο",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Κώφωση",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Κώφωση",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Δείχνει τα hitboxes οταν πεθαίνεις.",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "",
-  "LEVEL/HACK_SHOW_LAYOUT": "Εμφάνιση διάταξης",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Αφαιρεί όλη τη διακόσμηση και το χρώμα από τα επίπεδα",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Δείξε Τροχιά Παίκτη",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Δείχνει την τροχιά που πάει ο παίκτης",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Εμφάνιση διάταξης",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Αφαιρεί όλη τη διακόσμηση και το χρώμα από τα επίπεδα",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Εμφάνιση Ενεργοποιητών",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Εμφανίζει τους Ενεργοποιητές σε επίπεδο",
   "LEVEL/HACK_SHIPCOPTER": "",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Απεριόριστο μήκος επεξεργαστή",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Εμφάνιση διαδρομής hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Εμφανίζει ένα ίχνος για το πού πήγε το hitbox του προγράμματος αναπαραγωγής σας κατά τη διάρκεια μιας προσπάθειας, Απαιτείται Εμφάνιση Hitboxes",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Δείξε Τροχιά Παίκτη",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Δείχνει την τροχιά που πάει ο παίκτης",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Υπολογισμός παλαιού τύπου",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Διαγραφή",
   "REPLAY/GAMEPLAY": "Ρυθμίσεις Αναπαραγωγής",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Επιτρέπει Τυχη",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Μετατροπή (.json, .gdr)",
   "REPLAY/NONE": ""
 }
