--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "Switch Dash Fire",
   "GM_VAR/0096": "Switch Wave Trail",
   "HOME/LANGUAGE": "Language",
-  "HOME/SEARCH": "Search",
+  "HOME/SEARCH/SEARCH": "Search",
+  "HOME/SEARCH/AUTO_SELECT": "Auto-Select",
   "HOME/RULESETS": "Rulesets",
   "HOME/RULESETS/SAFE_MODE": "Safe Mode",
   "HOME/ANIM_SPEED": "Animations (ms)",
@@ -70,7 +71,7 @@
   "KEYBINDS/EMPTY": "N/A",
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "Anti-Kick",
-  "BYPASS/HACK_ANTI_KICK/TIP": "Prevents you being blocked from player certain levels",
+  "BYPASS/HACK_ANTI_KICK/TIP": "Prevents you being blocked from playing certain levels",
   "BYPASS/HACK_MAIN_LEVELS": "Main Levels",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Unlocks main demon levels",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Music Customiser",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Allows pulsing above 60hz, similar to pre-2.1 pulsing",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Classic Wave Trail",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplementation of the 2.1 wave trail",
+  "COSMETIC/HACK_COIN_SHOWER": "Coin Shower",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
+  "COSMETIC/HACK_NO_END_SHAKE": "No End Shake",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "Removes camera shake from level complete animation",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "Frozen Animations",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "Disables sprite animations like the Robot and Spider",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Hide Pause Button",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Disables pulsing on objects",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "No Respawn Flash",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Disables the respawn flash & circle effect",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "No Robot Fire",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "Removes boost fire animation and particles from Robot gamemode",
   "COSMETIC/HACK_NO_SHADERS": "No Shaders",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Disables in-level shaders",
   "COSMETIC/HACK_NO_SHAKE": "No Shake",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Disables shake triggers",
   "COSMETIC/HACK_NO_SPIDER_DASH": "No Spider Dash",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "Disables the Spider Dash effect when teleporting",
+  "COSMETIC/HACK_NO_SWING_FIRE": "No Swing Fire",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "Removes boost fire animation and particles from Swing gamemode",
   "COSMETIC/HACK_NO_TRAIL": "No Trail",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Sets the trail to always off",
   "COSMETIC/HACK_NO_WAVE_PULSE": "No Wave Pulse",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "Clear Oldest",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "Transparency",
   "LEVEL": "Level",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "Auto Clicker",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "Automatically applies inputs at exact intervals",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "Hold (frames)",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "Hold",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": " frames",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "Release (frames)",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "Release",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": " frames",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "Offset (frames)",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "Offset",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": " frames",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "Mode",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "Both Players",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "Player 1",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "Player 2",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Deafen at",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Deafen at",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Visualises level hitboxes, only on death",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Show with Noclip",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Show Death Object",
-  "LEVEL/HACK_SHOW_LAYOUT": "Show Layout",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Removes all decoration and colour from levels",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Show Trajectory",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Draws the predicted paths of a player for continuous button holds/releases",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Show Layout",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Removes all decoration and colour from levels",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "Background",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "Ground",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "Middle Ground",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "Objects",
   "LEVEL/HACK_SHOW_TRIGGERS": "Show Triggers",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Shows triggers in level",
   "LEVEL/HACK_SHIPCOPTER": "Shipcopter",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Uncapped Editor Length",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Show Hitboxes Trail",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Shows a trail of where your player's hitbox went during an attempt, Show Hitboxes required",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Show Trajectory",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Draws the predicted paths of a player for continuous button holds/releases",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "Iterations (steps)",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "Iterations",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "Thickness",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "Thickness",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "x",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Legacy Calculation",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "Gamemode Portals",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "Speed Portals",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Delete",
   "REPLAY/GAMEPLAY": "Gameplay Options",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Allow Randomness",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "Block Inputs",
   "REPLAY/CONVERT": "Convert (.json, .gdr)",
   "REPLAY/NONE": "No Replay Selected"
 }
