--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "Cambiar fuego de dash",
   "GM_VAR/0096": "Cambiar estela de wave",
   "HOME/LANGUAGE": "Idioma",
-  "HOME/SEARCH": "Buscar",
+  "HOME/SEARCH/SEARCH": "Buscar",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "Rulesets",
   "HOME/RULESETS/SAFE_MODE": "Modo Seguro",
   "HOME/ANIM_SPEED": "Animaciones (ms)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Permite pulsaciones por encima de los 60Hz, tal y como en la 2.1 y antes",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Estela clásica del wave",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplantación de la estela del wave de la 2.1",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Ocultar botón de pausa",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Desactiva la pulsación en los objetos",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Desactivar destello de reaparición",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Desactiva el destello de reaparición",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Desactivar shaders",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Desactiva los shaders en el nivel",
   "COSMETIC/HACK_NO_SHAKE": "Desactivar temblor",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Desactiva los triggers de temblor",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Desactivar estela",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Desactiva la estela globalmente",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Desactiva pulso del wave",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Niveles",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Silenciar en",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Silenciar en",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Visualiza la hitbox del nivel al morir",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Mostrar con noclip",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Mostrar el objeto estampado",
-  "LEVEL/HACK_SHOW_LAYOUT": "Mostrar layout",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Muestra el layout, eliminando la decoración y colores",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Mostrar trayectoria",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Muestra la trayectoria estimada del jugador si continuase manteniendo/soltando el input",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Mostrar layout",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Muestra el layout, eliminando la decoración y colores",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Mostrar triggers",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Hace visibles los triggers del nivel",
   "LEVEL/HACK_SHIPCOPTER": "Shipcopter",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Longitud infinita en el editor",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostrar rastro de hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Muestra un rastro del recorrido de tu jugador durante un intento, requiere activar 'Mostrar hitboxes'",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Mostrar trayectoria",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Muestra la trayectoria estimada del jugador si continuase manteniendo/soltando el input",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Evaluación clásica",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Borrar",
   "REPLAY/GAMEPLAY": "Opciones de gameplay",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Permitir aleatoriedad",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Convertir macro (.json, .gdr)",
   "REPLAY/NONE": "Ninguna repetición seleccionada"
 }
