--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "Aldatu Dash Sua",
   "GM_VAR/0096": "Aldatu Wave Aztarna",
   "HOME/LANGUAGE": "Hizkuntza",
-  "HOME/SEARCH": "Bilatu",
+  "HOME/SEARCH/SEARCH": "Bilatu",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "Arau-Multzoak",
   "HOME/RULESETS/SAFE_MODE": "Modu Segurua",
   "HOME/ANIM_SPEED": "Animazioak (ms)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "60Hz gaineko taupadak ahalbidetzen ditu, 2.1 eta aurretiko eran bezala",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Wave-Aztarna Klasikoa",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "2.1 bertsioaren wave-aztarnaren birsorketa",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Pausa-Botoia Ezkutatu",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Objektuen taupadak desgaitzen ditu",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Respawn Flash-ik Ez",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Respawn Flash- eta borobil-efektuak desgaitzen ditu",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Shader-ik Ez",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Mailen barruko shader-ak desgaitzen ditu",
   "COSMETIC/HACK_NO_SHAKE": "Dardararik Ez",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Shake trigger-ak desgaitzen ditu",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Aztarnarik Ez",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Jokalariaren aztarna desgaitzen du, beti",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Wave-Taupadarik Ez",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Maila",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Gortu",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "% ",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "an gortu",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Hiltzean, hitbox-ak ikusteko",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Noclip-ekin Erakutsi",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Hiltze-Objektua Erakutsi",
-  "LEVEL/HACK_SHOW_LAYOUT": "Layout-a Erakutsi",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Mailetatik apainketa eta kolore guztiak kentzen ditu",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Bidea Erakutsi",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Etengabeko botoi-eusteetan eta askatzeetan, jokalariaren aurreikusitako bideak marrazten ditu",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Layout-a Erakutsi",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Mailetatik apainketa eta kolore guztiak kentzen ditu",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Trigger-ak Erakutsi",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Mailaren barruan trigger-ak erakusten du",
   "LEVEL/HACK_SHIPCOPTER": "Shipcopter",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Editorean Mugagabea",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Hitbox-Aztarna Erakutsi",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Jokalariak saiakeran nondik igarotu zuen bidearen aztarna erakusten du, Hitbox-ak Erakutsi aukera behar du",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Bidea Erakutsi",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Etengabeko botoi-eusteetan eta askatzeetan, jokalariaren aurreikusitako bideak marrazten ditu",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Kalkulu Klasikoa",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Ezabatu",
   "REPLAY/GAMEPLAY": "Gameplay-Aukerak",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Auzazkoak Baimendu",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Bihurtu (.json, .gdr)",
   "REPLAY/NONE": "Errepikapenik Hautatu Gabe"
 }
