--- a/langs/fi-FI.json
+++ b/langs/fi-FI.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
   "HOME/LANGUAGE": "Kieli",
-  "HOME/SEARCH": "Hae",
+  "HOME/SEARCH/SEARCH": "Hae",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "",
   "HOME/RULESETS/SAFE_MODE": "Turvallinen Tila",
   "HOME/ANIM_SPEED": "",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Piilota Pause-nappula",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Poistaa käytöstä objektipulssit",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Ei Uudelleensyntymisen välähdystä",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Poistaa uudelleensyntymisessä tapahtuvan välähdyksen käytöstä",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Ei Shadereitä",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Poistaa tason shaderit käytöstä",
   "COSMETIC/HACK_NO_SHAKE": "Ei Heilutusta",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Poistaa shake triggerit käytöstä",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Ei Jälkeä",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Asettaa jäljen aina pois päältä",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Ei Waven Pulssia",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Taso",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Deafenaa",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Deafenaa",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Näyttää tason hitboxit, mutta vain kuolemassa",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "",
-  "LEVEL/HACK_SHOW_LAYOUT": "Näytä Layout",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Poistaa kaikki koristelut ja värit tasosta",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Näytä Layout",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Poistaa kaikki koristelut ja värit tasosta",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Näytä Triggerit",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Näyttää tason triggerit",
   "LEVEL/HACK_SHIPCOPTER": "",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Rajoittamaton Editorin Pituus",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Näytä Hitboxien Jälki",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Näyttää jäljen siitä, mihin pelaajan hitboxi meni yrityksen aikana. Näytä hitboxit vaadittu",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Legacy Laskenta",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "",
   "REPLAY/GAMEPLAY": "",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "",
   "REPLAY/NONE": ""
 }
