--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "Dash tűz váltása",
   "GM_VAR/0096": "Wave vonal váltása",
   "HOME/LANGUAGE": "Nyelv",
-  "HOME/SEARCH": "Keresés",
+  "HOME/SEARCH/SEARCH": "Keresés",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "Szabályzatok",
   "HOME/RULESETS/SAFE_MODE": "Bitonságos Mód",
   "HOME/ANIM_SPEED": "Animáció gyorsaság (milliszekundum)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Pulzálás működését engedélyezi 60 HZ felett, úgy, mint ahogy 2.1 előtt volt.",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Klasszikus wave vonal",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Visszahozza a wave vonalát úgy, mint ahogy 2.1-ben volt.",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Megállító Gomb Elrejtése",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Kikapcsolja az objektumok pulzálását",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Újraéledés villogás kikapcsolása",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Kikapcsolja az újraéledés utáni villogást és a kör effektust",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Shaderek kikapcsolása",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Kikapcsolja a pályán belüli shadereket",
   "COSMETIC/HACK_NO_SHAKE": "Nincs rázkódás",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Kikapcsolja a rázkódás triggereket",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Nyomvonal kikapcsolása",
   "COSMETIC/HACK_NO_TRAIL/TIP": "A játékos utáni nyomvonalat kikapcsolja",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Wave Pulzálás kikapcsolása",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Pálya",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Süketítés itt",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Lesüketítés itt",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Halál után megmutatja a hitboxokat",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Mutatás Noclippel is",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Csak a halál objektum mutatása",
-  "LEVEL/HACK_SHOW_LAYOUT": "Layout mutatása",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Kiszedi az összes dekorációt a pályából, csak a pálya vázát mutatja",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Mozgáspálya mutatása",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Megmutatja hova fog a karaktered menni",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Layout mutatása",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Kiszedi az összes dekorációt a pályából, csak a pálya vázát mutatja",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Triggerek",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Megmutatja a triggereket a pályában, játék közben",
   "LEVEL/HACK_SHIPCOPTER": "A shipcopter",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Végtelen Editor hossz",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Hitbox Trail mutatása",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Shows a trail of where your player hitbox went during an attempt, Show Hitboxes required",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Mozgáspálya mutatása",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Megmutatja hova fog a karaktered menni",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Régi számolás",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Kitörlés",
   "REPLAY/GAMEPLAY": "Gameplay opciók",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Véletlenszerűség",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Konvertálás",
   "REPLAY/NONE": "Nincs"
 }
