--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
   "HOME/LANGUAGE": "Lingua",
-  "HOME/SEARCH": "Cerca",
+  "HOME/SEARCH/SEARCH": "Cerca",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "Set Regole",
   "HOME/RULESETS/SAFE_MODE": "Modalità Sicura",
   "HOME/ANIM_SPEED": "",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Permette la pulsazione sopra i 60hz, come nella 2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Wave Trail Classico",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Re-implementazione del wave trail della 2.1",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Nascondi Pulsante Pausa",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Rimuove gli oggetti pulsanti",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "No Respawn Flash",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Rimuove l'effetto flash dopo il respawn",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "No Shader",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Disabilita gli shader nei livelli",
   "COSMETIC/HACK_NO_SHAKE": "No Shake",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Disabilita i trigger di shake",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "No Scia",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Tiene la scia sempre disattivata",
   "COSMETIC/HACK_NO_WAVE_PULSE": "No Pulsazione Wave",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Livello",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Silenzia audio al",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Silenzia audio al",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Visualizza le hitbox del livello, solo alla morte",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Mostra con Noclip",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Mostra Oggetto Morte",
-  "LEVEL/HACK_SHOW_LAYOUT": "Mostra Layout",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Rimuove tutte le decorazioni e i colori dai livelli",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Mostra Traiettoria",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Disegna il percorso previsto di un player per un continuo hold/release",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Mostra Layout",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Rimuove tutte le decorazioni e i colori dai livelli",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Mostra Trigger",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Mostra i trigger nel livello",
   "LEVEL/HACK_SHIPCOPTER": "ShipCopter",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Lunghezza Illimitata Editor",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostra Traccia Hitbox",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Mostra una traccia della posizione della hitbox del giocatore durante un tentativo, richiede Mostra Hitbox",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Mostra Traiettoria",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Disegna il percorso previsto di un player per un continuo hold/release",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Calcolo Legacy",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Elimina",
   "REPLAY/GAMEPLAY": "Opzioni gameplay",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Permetti Eventi Random",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Converti (.json, .gdr)",
   "REPLAY/NONE": ""
 }
