--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "대시 불꽃 전환",
   "GM_VAR/0096": "웨이브 트레일 전환",
   "HOME/LANGUAGE": "언어",
-  "HOME/SEARCH": "검색",
+  "HOME/SEARCH/SEARCH": "검색",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "규칙 세트",
   "HOME/RULESETS/SAFE_MODE": "안전 모드",
   "HOME/ANIM_SPEED": "애니메이션 (밀리초)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "2.1 초기 버전의 펄스와 유사하게 60Hz 이상의 펄스을 허용합니다.",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "클래식 웨이브 트레일",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "2.1 버전의 웨이브 트레일을 재구현합니다.",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "에니메이션 동결",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "로봇이나 거미처럼 스프라이트 애니메이션을 비활성화합니다.",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "일시 정지 버튼 숨기기",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "오브젝트의 펄스를 비활성화합니다.",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "리스폰 플래시 비활성화",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "리스폰 플래시와 원 이펙트를 비활성화합니다.",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "셰이더 비활성화",
   "COSMETIC/HACK_NO_SHADERS/TIP": "레벨 내 셰이더를 비활성화합니다.",
   "COSMETIC/HACK_NO_SHAKE": "흔들기 비활성화",
   "COSMETIC/HACK_NO_SHAKE/TIP": "흔들기 트리거를 비활성화합니다.",
   "COSMETIC/HACK_NO_SPIDER_DASH": "거미 대시 비활성화",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "순간이동 시 거미 대시 이펙트를 비활성화합니다.",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "트레일 비활성화",
   "COSMETIC/HACK_NO_TRAIL/TIP": "트레일을 항상 꺼짐으로 설정합니다.",
   "COSMETIC/HACK_NO_WAVE_PULSE": "웨이브 펄스 비활성화",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "가장 오래된 항목 지우기",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "투명도",
   "LEVEL": "레벨",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "다음에서 음소거",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "음소거",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "사망 시 레벨 히트박스를 표시합니다.",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "노클립과 함께 표시",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "사망 오브젝트 표시",
-  "LEVEL/HACK_SHOW_LAYOUT": "레이아웃 표시",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "레벨에서 모든 장식과 색상을 제거합니다.",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "궤적 표시",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "플레이어가 버튼을 계속 누르고 떼는 경우의 예상 경로를 표시합니다.",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "레이아웃 표시",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "레벨에서 모든 장식과 색상을 제거합니다.",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "트리거 표시",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "레벨에서 트리거를 표시합니다.",
   "LEVEL/HACK_SHIPCOPTER": "쉽콥터",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "무제한 에디터 길이",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "히트박스 트레일 표시",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "시도 중 플레이어의 히트박스가 어디로 갔는지 트레일을 표시합니다, 히트박스 표시가 필요합니다.",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "궤적 표시",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "플레이어가 버튼을 계속 누르고 떼는 경우의 예상 경로를 표시합니다.",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "레거시 계산",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "게임모드 포탈",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "속도 포탈",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "삭제",
   "REPLAY/GAMEPLAY": "게임 플레이 옵션",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "무작위 허용",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "변환 (.json, .gdr)",
   "REPLAY/NONE": "리플레이가 선택되지 않았습니다."
 }
