--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "Zamień Dash Fire",
   "GM_VAR/0096": "Zamień Trail Wave",
   "HOME/LANGUAGE": "Język",
-  "HOME/SEARCH": "Wyszukaj",
+  "HOME/SEARCH/SEARCH": "Wyszukaj",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "Rulesety",
   "HOME/RULESETS/SAFE_MODE": "Safe Mode",
   "HOME/ANIM_SPEED": "Animacje (ms)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Pozwala na pulsowanie powyżej 60 Hz, podobnie jak przed wersją 2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Klasyczny Trail Wave",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplementacja wave trailu z wersji 2.1",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Ukryj Przycisk Pauzy",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Wyłącza pulsowanie obiektów",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Wyłącz Błysk Przy Odradzaniu",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Wyłącza błysk przy respawnie i efekt okręgu",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Wyłącz Shadery",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Wyłącza shadery w poziomach",
   "COSMETIC/HACK_NO_SHAKE": "Wyłącz Drganie Kamery",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Wyłącza triggery drgania kamery",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Wyłącz Trail",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Ustawia trail za graczem na zawsze wyłączony",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Wyłącz Puls Wave",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Poziom",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Wycisz przy",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Wycisz przy",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Wizualizuje hitboxy poziomu, tylko przy śmierci",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Pokaż z Noclipem",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Pokaż Obiekt Śmierci",
-  "LEVEL/HACK_SHOW_LAYOUT": "Pokaż Layout",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Usuwa dekoracje i kolory z poziomów",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Pokaż Trajektorię",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Rysuje przewidywane ścieżki gracza przy ciągłym przytrzymaniu/zwolnieniu przycisku",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Pokaż Layout",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Usuwa dekoracje i kolory z poziomów",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Pokaż Triggery",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Pokazuje triggery w poziomie",
   "LEVEL/HACK_SHIPCOPTER": "Shipcopter",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Nieograniczona Długość Edytora",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Pokaż Ślad Hitboxów",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Pokazuje ślad, gdzie hitbox gracza przeszedł podczas próby. Wymaga 'Pokaż Hitboxy'",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Pokaż Trajektorię",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Rysuje przewidywane ścieżki gracza przy ciągłym przytrzymaniu/zwolnieniu przycisku",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Klasyczne Obliczenia",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Usuń",
   "REPLAY/GAMEPLAY": "Opcje Gameplay'u",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Losowość",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Konwertuj (.json, .gdr)",
   "REPLAY/NONE": "Nie Zaznaczono"
 }
