--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
   "HOME/LANGUAGE": "Språk",
-  "HOME/SEARCH": "Sök",
+  "HOME/SEARCH/SEARCH": "Sök",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "Regler",
   "HOME/RULESETS/SAFE_MODE": "Säkert läge",
   "HOME/ANIM_SPEED": "",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Tillåter pulsering över 60 Hz, liknande pulseringen före 2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Klassiskt wave spår",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Återimplementering av 2.1 wave-spåret",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "Frusna animationer",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "Inaktiverar sprite-animationer som roboten och spindeln",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Dölj pausknapp",
@@ -162,18 +167,22 @@
   "COSMETIC/HACK_NO_PARTICLES_CLASSIC/TIP": "Inaktiverar partikelsystemet (mestadels)",
   "COSMETIC/HACK_NO_PORTAL_CIRCLE": "Ingen portal cirkel",
   "COSMETIC/HACK_NO_PORTAL_CIRCLE/TIP": "Inaktiverar den inre cirkeln vid inträde i en portal",
-  "COSMETIC/HACK_": "Ingen portalblixt",
+  "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "Inaktiverar portalblixt från storleksportaler",
   "COSMETIC/HACK_NO_PULSE": "Ingen puls",
   "COSMETIC/HACK_NO_PULSE/TIP": "Inaktiverar pulsering på objekt",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Ingen respawn-blixt",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Inaktiverar respawn-blixt- och cirkeleffekten.",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Inga shaders",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Inaktiverar nivåns shaders",
   "COSMETIC/HACK_NO_SHAKE": "Ingen skakning",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Inaktiverar skaktriggers",
   "COSMETIC/HACK_NO_SPIDER_DASH": "Ingen spindel-dash",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "Inaktiverar spindelns dash-effekt vid teleportering",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Inget spår",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Ställer in spåret på alltid avstängt",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Ingen wave-puls",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "Rensa äldsta",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "Genomskinlighet",
   "LEVEL": "Nivå",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Ljud av vid",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Ljud av",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Visualiserar hitboxar, endast vid döden",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "",
-  "LEVEL/HACK_SHOW_LAYOUT": "Visa layout",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Tar bort all dekoration och färg från nivåerna",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Visa layout",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Tar bort all dekoration och färg från nivåerna",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Visa triggers",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Visar triggers i nivå",
   "LEVEL/HACK_SHIPCOPTER": "",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Obegränsad nivåskaparlängd",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Visa hitbox-spår",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Visar ett spår av spelarens hitbox under ett försök, kräver Visa hitboxar",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Äldre beräkning",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "",
   "REPLAY/GAMEPLAY": "",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "",
   "REPLAY/NONE": ""
 }
