--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "Dash Ateşini Değiştir",
   "GM_VAR/0096": "Wave İzini Değiştir",
   "HOME/LANGUAGE": "Dil",
-  "HOME/SEARCH": "Ara",
+  "HOME/SEARCH/SEARCH": "Ara",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "Kural Setleri",
   "HOME/RULESETS/SAFE_MODE": "Güvenli Mod",
   "HOME/ANIM_SPEED": "Animasyonlar (ms)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "60hz'in üstünde nabız efektine izin verir, 2.1'den önceki gibi",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Eski Wave İzi",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "2.1'deki olan wave izini geri getirir",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Duraklatma Düğmesini Gizle",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Bazı nesneler üzerindeki nabız efektini devre dışı bırakır",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Yeniden Doğma Flaşını Gizle",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Yeniden doğarken oluşan flaş ve daire şeklindeki efektleri kaldırır",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Gölgelendiricileri Gizle",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Seviye içi gölgelendirme efektlerini devre dışı bırakır",
   "COSMETIC/HACK_NO_SHAKE": "Sarsıntı Durdur",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Sarsıntı triggerlarını devre dışı bırakır",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "İzi Gizle",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Oyuncunun izini kaldırır",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Wave Nabzını Durdur",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Seviye",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Sağırlaşma yüzdesi",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Sağırlaşma yüzdesi",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Ölünce seviyenin hitboxlarını gösterir",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Noclip ile Göster",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Ölüm Nesnesini Göster",
-  "LEVEL/HACK_SHOW_LAYOUT": "Düzeni Göster",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Seviyelerdeki tüm dekorasyonları ve renkleri kaldırır",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Yörüngeyi Göster",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Tuş basma/bırakma için oyuncunun tahmini yollarını çizer",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Düzeni Göster",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Seviyelerdeki tüm dekorasyonları ve renkleri kaldırır",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Triggerları Göster",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Triggerları seviyede oynanış sırasında gösterir",
   "LEVEL/HACK_SHIPCOPTER": "Shipcopter",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Sınırsız Editör Uzunluğu",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Hitbox İzini Göster",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Oynanış sırasında oyuncunuzun hitboxunun nereye gittiğinin izini gösterir, Hitboxları Göster gerekli",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Yörüngeyi Göster",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Tuş basma/bırakma için oyuncunun tahmini yollarını çizer",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Eski Hesaplama",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Sil",
   "REPLAY/GAMEPLAY": "Oynanış Seçenekleri",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Rastgeleliğe İzin Ver",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Dönüştür (.json, .gdr)",
   "REPLAY/NONE": "Makro Seçilmedi"
 }
