--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "Đổi lửa Dash Spider",
   "GM_VAR/0096": "Đổi trail của Wave",
   "HOME/LANGUAGE": "Ngôn ngữ",
-  "HOME/SEARCH": "Tìm kiếm",
+  "HOME/SEARCH/SEARCH": "Tìm kiếm",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "Quy tắc",
   "HOME/RULESETS/SAFE_MODE": "Chế độ an toàn",
   "HOME/ANIM_SPEED": "Hoạt cảnh (ms)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Cho phép hiệu ứng nhịp đập trên 60hz, giống với trước phiên bản 2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Wave Trail Cũ",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Tái tạo wave trail ở bản 2.1",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "Đóng Băng Hoạt cảnh",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "Vô hiệu hóa các hoạt ảnh như Robot và Spider",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Ẩn nút tạm dừng",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Tắt hiệu ứng \"nhịp đập\" ở một số objects",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Tắt nhấp nháy khi hồi sinh",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Tắt hiệu ứng nhấp nháy và có hình tròn khi hồi sinh.",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Tắt hiệu ứng shaders",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Tắt các hiệu ứng shader trong level",
   "COSMETIC/HACK_NO_SHAKE": "Không rung lắc",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Vô hiệu hóa các shake trigger",
   "COSMETIC/HACK_NO_SPIDER_DASH": "Tắt Spider Dash",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "Tắt hiệu ứng Dash của Spider khi teleport",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Tắt trail",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Tắt các trail của player",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Tắt Wave Pulse",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "Xóa Cũ Nhất",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "Trong Suốt",
   "LEVEL": "Level",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Tắt tiếng vào",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Tắt tiếng vào",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Hiển thị hitbox khi chết",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "",
-  "LEVEL/HACK_SHOW_LAYOUT": "Hiện layout",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Xóa hết các deco và màu trong level",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Hiện quỹ đạo",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Vẽ đường đi dự kiến của người chơi cho ấn giữ và nhả nút liên tục",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Hiện layout",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Xóa hết các deco và màu trong level",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Hiện trigger",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Hiện triger trong level",
   "LEVEL/HACK_SHIPCOPTER": "Shipcopter",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Không giới hạn độ dài editor",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Hiện Trail Hitbox",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Hiển thị trail hitbox của người chơi trong các attempt, yêu cầu Hiện Hitbox",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Hiện quỹ đạo",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Vẽ đường đi dự kiến của người chơi cho ấn giữ và nhả nút liên tục",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Tính toán kiểu cũ",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "Portal Chế Độ Chơi",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "Portal Tốc Độ",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Xóa",
   "REPLAY/GAMEPLAY": "Tùy chọn Gameplay",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Cho phép Random",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Chuyển đổi (.json, .gdr)",
   "REPLAY/NONE": "Không có Bản phát lại nào được chọn"
 }
