--- a/langs/LIVE.json
+++ b/langs/LIVE.json
@@ -16,18 +16,19 @@
   "HOME/THEME/2/TOGGLE": "Octavus",
   "HOME/THEME/3/TOGGLE": "Septima",
   "HOME/THEME/4/TOGGLE": "Sextus",
-  "HOME/THEME/5/TOGGLE": "Genesis",
-  "HOME/THEME/6/TOGGLE": "Catppuccin",
-  "HOME/THEME/7/TOGGLE": "Mint",
-  "HOME/THEME/8/TOGGLE": "Purple Rain",
-  "HOME/THEME/9/TOGGLE": "Platypus",
-  "HOME/THEME/10/TOGGLE": "Barbie",
-  "HOME/THEME/11/TOGGLE": "Navy",
-  "HOME/THEME/12/TOGGLE": "Cyanish",
-  "HOME/THEME/13/TOGGLE": "7up",
-  "HOME/THEME/14/TOGGLE": "Desert",
-  "HOME/THEME/15/TOGGLE": "Dull",
-  "HOME/THEME/16/TOGGLE": "Duller",
+  "HOME/THEME/5/TOGGLE": "Festive",
+  "HOME/THEME/6/TOGGLE": "Genesis",
+  "HOME/THEME/7/TOGGLE": "Catppuccin",
+  "HOME/THEME/8/TOGGLE": "Mint",
+  "HOME/THEME/9/TOGGLE": "Purple Rain",
+  "HOME/THEME/10/TOGGLE": "Platypus",
+  "HOME/THEME/11/TOGGLE": "Barbie",
+  "HOME/THEME/12/TOGGLE": "Navy",
+  "HOME/THEME/13/TOGGLE": "Cyanish",
+  "HOME/THEME/14/TOGGLE": "7up",
+  "HOME/THEME/15/TOGGLE": "Desert",
+  "HOME/THEME/16/TOGGLE": "Dull",
+  "HOME/THEME/17/TOGGLE": "Duller",
   "HOME/MISC/LICENSES/0": "curl",
   "HOME/MISC/LICENSES/0/DATA": "COPYRIGHT AND PERMISSION NOTICE\n\nCopyright (c) 1996 - 2025, Daniel Stenberg, <daniel@haxx.se>, and many\ncontributors, see the THANKS file.\n\nAll rights reserved.\n\nPermission to use, copy, modify, and distribute this software for any purpose\nwith or without fee is hereby granted, provided that the above copyright\nnotice and this permission notice appear in all copies.\n\nTHE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\nIMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\nFITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT OF THIRD PARTY RIGHTS. IN\nNO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,\nDAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR\nOTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE\nOR OTHER DEALINGS IN THE SOFTWARE.\n\nExcept as contained in this notice, the name of a copyright holder shall not\nbe used in advertising or otherwise to promote the sale, use or other dealings\nin this Software without prior written authorization of the copyright holder.",
   "HOME/MISC/LICENSES/1": "Detours",
