--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
   "HOME/LANGUAGE": "Langue",
-  "HOME/SEARCH": "Rechercher ",
+  "HOME/SEARCH/SEARCH": "Rechercher ",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "",
   "HOME/RULESETS/SAFE_MODE": "",
   "HOME/ANIM_SPEED": "Animations (ms)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Permet des pulsations au delà de 60Hz, comme les  versions antérieures à la 2.1.",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Traînée Wave classique",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Réimplémentation de la traînée de la Wave de la v2.1",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Masquer le bouton Pause",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Désactive la pulsation de la musique des objets",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Pas d'effet de Réapparition",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Désactive l'effet de flash et du cercle à la réapparition",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Pas de Shaders",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Désactive les shaders des niveaux",
   "COSMETIC/HACK_NO_SHAKE": "Pas de Secousse",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Désactive les déclencheurs de secousse",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Pas de Traînée",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Désactive la traînée du personnage",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Pulsation de la Wave",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Niveau",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Sourdine à ",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Sourdine à ",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Permet d'afficher les Hitboxes des objets uniquement après une mort",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Afficher avec Noclip",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Afficher l'objet de mort",
-  "LEVEL/HACK_SHOW_LAYOUT": "Afficher le Plan",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Supprime toutes les décorations et couleurs du niveau pour afficher un plan/Layout",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Afficher la trajectoire",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Dessine les chemins prévus d'un joueur lors du maintiens ou relâchements continus des boutons",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Afficher le Plan",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Supprime toutes les décorations et couleurs du niveau pour afficher un plan/Layout",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Afficher les déclencheurs",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Affiche tous les déclencheurs du niveau en jouant",
   "LEVEL/HACK_SHIPCOPTER": "Shipcopter",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Longueur d'éditeur illimitée",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Permet d'afficher la traînée des Hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Montre une traînée de la position des Hitboxes pendant une tentative, nécessite d'afficher les hitboxes",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Afficher la trajectoire",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Dessine les chemins prévus d'un joueur lors du maintiens ou relâchements continus des boutons",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Calcul hérité",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Supprimer",
   "REPLAY/GAMEPLAY": "Options de jeu",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Autoriser l'aléatoire",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Convertir (.json, .gdr)",
   "REPLAY/NONE": "Aucun replay sélectionné"
 }
