--- a/langs/ja-JP.json
+++ b/langs/ja-JP.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
   "HOME/LANGUAGE": "言語",
-  "HOME/SEARCH": "検索",
+  "HOME/SEARCH/SEARCH": "検索",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "",
   "HOME/RULESETS/SAFE_MODE": "セーフモード",
   "HOME/ANIM_SPEED": "",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "ポーズボタンを非表示",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "オブジェクトのパルスを無効化します",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "リスポーンフラッシュなし",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "リスポーン時のフラッシュおよび円効果を無効化します",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "シェーダーなし",
   "COSMETIC/HACK_NO_SHADERS/TIP": "レベル内のシェーダーを無効化します",
   "COSMETIC/HACK_NO_SHAKE": "揺れなし",
   "COSMETIC/HACK_NO_SHAKE/TIP": "揺れトリガーを無効化します",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "トレイルなし",
   "COSMETIC/HACK_NO_TRAIL/TIP": "トレイルを常にオフに設定します",
   "COSMETIC/HACK_NO_WAVE_PULSE": "波のパルスなし",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "レベル",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "ミュート開始",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "ミュート開始",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "",
-  "LEVEL/HACK_SHOW_LAYOUT": "レイアウト表示",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "レベルからすべての装飾と色を削除します",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "レイアウト表示",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "レベルからすべての装飾と色を削除します",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "トリガー表示",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "レベル内のトリガーを表示します",
   "LEVEL/HACK_SHIPCOPTER": "",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "エディタ長さ無制限",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "ヒットボックストレイル表示",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "試行中のプレイヤーヒットボックスの軌跡を表示します（ヒットボックス表示が必要）",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "旧式計算",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "",
   "REPLAY/GAMEPLAY": "",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "",
   "REPLAY/NONE": ""
 }
