--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
   "HOME/LANGUAGE": "Idioma",
-  "HOME/SEARCH": "Pesquisa",
+  "HOME/SEARCH/SEARCH": "Pesquisa",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "",
   "HOME/RULESETS/SAFE_MODE": "Modo Seguro",
   "HOME/ANIM_SPEED": "Animações (ms)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Permite o pulsamento acima de 60hz, similar ao pulsamento pré-2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Trilha de Wave Clássica",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplementação da trilha de wave da 2.1",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Esconder Botão de Pausa",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Desabilita o pulso em objetos",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Sem Flash de Respawn",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Desabilita o efeito de flash e círculo de respawn",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Sem Shaders",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Desabilita shaders em fases",
   "COSMETIC/HACK_NO_SHAKE": "Sem Agitação",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Desabilita triggers de agitação",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Sem Trilha",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Define a trilha para sempre desligada",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Sem Pulso da Wave",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Fase",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Silenciar na",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Silenciar na",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Mostra os hitboxes do nível, apenas ao morrer",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Mostrar com Noclip",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Mostrar objeto da morte",
-  "LEVEL/HACK_SHOW_LAYOUT": "Mostrar Layout",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Remove todas as decorações e cores dos níveis",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Mostrar trajetória",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Desenha a previsão da trajetória do jogador com base o movimento de segurar e soltar o botão",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Mostrar Layout",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Remove todas as decorações e cores dos níveis",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Mostrar Triggers",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Mostra os triggers da fase",
   "LEVEL/HACK_SHIPCOPTER": "",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Comprimento do Editor Sem Limite",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostrar Trilha de Hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Mostra uma trilha de onde a hitbox do jogador foi durante uma tentativa, exige Mostrar Hitboxes",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Mostrar trajetória",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Desenha a previsão da trajetória do jogador com base o movimento de segurar e soltar o botão",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Cálculo Legado",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Deletar",
   "REPLAY/GAMEPLAY": "Opções de Jogabilidade",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Converter (.json, .gdr)",
   "REPLAY/NONE": "Nenhum replay selecionado"
 }
