--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "Переключить огни деш орбов",
   "GM_VAR/0096": "Переключить след волны",
   "HOME/LANGUAGE": "Язык",
-  "HOME/SEARCH": "Поиск",
+  "HOME/SEARCH/SEARCH": "Поиск",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "Правила",
   "HOME/RULESETS/SAFE_MODE": "Безопасный режим",
   "HOME/ANIM_SPEED": "Анимации (мс)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Возвращает пульсации выше 60 Гц, как в pre-2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Классический след волны",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Реализует след волны из 2.1",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "Заморозить анимации",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "Выключает спрайт анимации, например, Робота и Паука.",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Скрыть кнопку паузы",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Отключает пульсации объектов",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Без вспышки позрождения",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Отключает вспышку и круг при появлении игрока",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Без шейдеров",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Отключает все шейдеры в уровне",
   "COSMETIC/HACK_NO_SHAKE": "Без тряски",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Отключает шейк триггеры",
   "COSMETIC/HACK_NO_SPIDER_DASH": "Без деша паука",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "Выключает след паука при телепортации",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Без следа",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Всегда отключает след игрока",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Без пульсации волны",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "Удалить самый старый",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "Прозрачность",
   "LEVEL": "Уровень",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Заглушить звук на",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Заглушить звук на",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Показывает хитбоксы только при смерти",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Показывать при включенном ноуклипе",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Показать объект о который умер игрок",
-  "LEVEL/HACK_SHOW_LAYOUT": "Показать лайаут",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Удаляет все декорации и цвета из уровня",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Показать траекторию",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Рисует просчитанную траекторию, которой будет следовать игрок при зажатии/отжатии",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Показать лайаут",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Удаляет все декорации и цвета из уровня",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Показывать триггеры",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Визуализирует триггеры при игре в уровень",
   "LEVEL/HACK_SHIPCOPTER": "Корабль-коптер",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Не ограничивать длину в редакторе",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "След хитбоксов",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Показывает путь игрока в виде хитбоксов, требует включенный показ хитбоксов",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Показать траекторию",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Рисует просчитанную траекторию, которой будет следовать игрок при зажатии/отжатии",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Старый рассчёт",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "Порталы режимов",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "Порталы скорости",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Удалить",
   "REPLAY/GAMEPLAY": "Настройки воспроизведения",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Разрешить случайность",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Конвертировать (.json, .gdr)",
   "REPLAY/NONE": "Нет выбранного макроса"
 }
