--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "Змінити полум'я деш-ефекту",
   "GM_VAR/0096": "Змінити трейл вейву",
   "HOME/LANGUAGE": "Мова",
-  "HOME/SEARCH": "Пошук",
+  "HOME/SEARCH/SEARCH": "Пошук",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "Набори правил",
   "HOME/RULESETS/SAFE_MODE": "Безпечний режим",
   "HOME/ANIM_SPEED": "Анімації (мс)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Дозволяє пульсацію понад 60 Гц (що робить її схожою на пульсацію до версії 2.1)",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Класичний трейл вейву",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Реалізація трейлу вейву з версії 2.1",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "Заморозка анімацій",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "Деактивує анімації спрайтів (наприклад, робота й павука)",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Сховати кнопку паузи",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Деактивує пульсацію об'єктів",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Деакт. спалаху при переродженні",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Деактивує ефекти спалаху при переродженні гравця",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "Деакт. шейдерів",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Деактивує шейдери в рівнях",
   "COSMETIC/HACK_NO_SHAKE": "Деакт. тряски",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Деактивує тригери тряски екрану в рівнях",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Деакт. трейлу",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Деактивує трейл гравця",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Деакт. пульсації вейву",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "Рівні",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Заглушитися на",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Заглушитися на",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Візуалізує хітбокси в рівні після смерті гравця",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Показати з ноукліпом",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Показати об'єкт смерті",
-  "LEVEL/HACK_SHOW_LAYOUT": "Показ леяуту",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Прибирає всі декорації та кольори з рівня",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "Показ траєкторії",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "Показує передбачення траєкторії у вигляді шляхів для тривалого утримування/відпускання кнопки",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Показ леяуту",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Прибирає всі декорації та кольори з рівня",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "Показ тригерів",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Показує тригери в рівні",
   "LEVEL/HACK_SHIPCOPTER": "Кораблекоптер",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Необмежена довжина в редакторі",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Показ хітбоксів трейлом",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Показує трейл у вигляді хітбоксів, який іде в тому ж напрямку, що й гравець; потрібен показ хітбоксів",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Показ траєкторії",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Показує передбачення траєкторії у вигляді шляхів для тривалого утримування/відпускання кнопки",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Старі розрахунки",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "Портали режиму",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "Портали швидкості",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Видалити",
   "REPLAY/GAMEPLAY": "Параметри геймплею",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Дозволити рандом",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "Конвертувати (.json, .gdr)",
   "REPLAY/NONE": "Ви не вибрали макрос"
 }
