--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -39,7 +39,8 @@
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
   "HOME/LANGUAGE": "语言",
-  "HOME/SEARCH": "搜索",
+  "HOME/SEARCH/SEARCH": "搜索",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "",
   "HOME/RULESETS/SAFE_MODE": "",
   "HOME/ANIM_SPEED": "动画速度 (ms)",
@@ -105,6 +106,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "允许在60hz以上pulse，类似于 2.1 之前",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "经典Wave尾迹",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "2.1的Wave尾迹",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "隐藏暂停键",
@@ -168,12 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "禁用Pulse特效",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "无复活特效",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "禁用复活时特效",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "无Shaders",
   "COSMETIC/HACK_NO_SHADERS/TIP": "禁用关卡内Shaders",
   "COSMETIC/HACK_NO_SHAKE": "无Shake",
   "COSMETIC/HACK_NO_SHAKE/TIP": "禁用Shake效果",
   "COSMETIC/HACK_NO_SPIDER_DASH": "",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "无玩家尾迹",
   "COSMETIC/HACK_NO_TRAIL/TIP": "禁用玩家设置的尾迹",
   "COSMETIC/HACK_NO_WAVE_PULSE": "无Wave Pulse",
@@ -238,6 +247,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "关卡内",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "静音",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "在指定%静音",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -328,10 +352,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "死亡时显示关卡碰撞箱",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "显示Noclip",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "显示致死的碰撞箱",
-  "LEVEL/HACK_SHOW_LAYOUT": "显示Layout",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "去除装饰展现layout",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "预测轨迹",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "显示预测的玩家轨迹",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "显示Layout",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "去除装饰展现layout",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "显示Triggers",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "显示关卡内的trigger",
   "LEVEL/HACK_SHIPCOPTER": "Shipcopter",
@@ -410,6 +436,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "编辑器长度无限",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "显示碰撞箱尾迹",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "绘制玩家碰撞箱的痕迹，需要开启碰撞箱显示",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "预测轨迹",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "显示预测的玩家轨迹",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "经典位置计算",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
@@ -654,6 +687,7 @@
   "REPLAY/END_LAYOUT/DELETE": "删除",
   "REPLAY/GAMEPLAY": "Gameplay选项",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "允许随机性",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "转换(.json,.gdr格式)",
   "REPLAY/NONE": "未选择Replay"
 }
